# phylopypruner

./: .gitignore  =1.4.0  CITATION.cff  LICENSE  MANIFEST.in  README.md  build.sh  help.txt  pyproject.toml  setup.py
examples/: 01778.fa  01778.tre  02653.fa  02653.tre  02717.fa  02717.tre  08750.fa  08750.tre  08759.fa  08759.tre  08774.fa  08774.tre  08783.fa  08783.tre  08788.fa  08788.tre  08821.fa  08821.tre  08828.fa  08828.tre  1013.fa  1013.tre  1017.fa  1017.tre  1018.fa  1018.tre  ALICUT_9938.tre  supermatrix_stats.csv
examples/lophotrochozoa/: .~lock.abbreviations.tsv#  01482.fa  01482.tre  01549.fa  05504.fa  05749.fa  05749.tre  05894.tre  10744.fa  14983.fa  subclades.txt
examples/tunicata/: 0207.fa  0207.tre  (+19 more)
paralog_pruner/: TreeNode.py  newick.py  tree_prune.py
phylopypruner/: __main__.py  decontamination.py  fasta.py  filtering.py  gene_partition.py  groups.py  log.py  mask_monophylies.py  msa.py  multiple_sequence_alignment.py  newick.py  phylopypruner.py  plot.py  prune_paralogs.py  report.py  root.py  run.py  sequence.py  settings.py  summary.py  supermatrix.py  taxonomic_groups.py  tree_node.py  tree_stats.py
phylopypruner-1.1.3/: README.md  build.sh  setup.py
phylopypruner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build.sh  orthofinder2phylopypruner  orthofinder2phylopypruner.bash  phylopypruner
src/: fasta.py  filtering.py  log.py  mask_monophylies.py  msa.py  multiple_sequence_alignment.py  newick.py  phylopypruner.py  prune_paralogs.py  root.py  sequence.py  settings.py  tree_node.py
(+50 files in other folders)
